Even more ports from Cytoscape 2.8.
git-svn-id: http://chianti.ucsd.edu/svn@22882 0ecc0d97-ab19-0410-9704-bfe1a75892f5