@@ -28,35 +28,43 @@
 package org.cytoscape.ding.impl;
 
 
+import java.awt.Color;
+import java.awt.Font;
+import java.awt.Paint;
+import java.awt.Stroke;
+
+import java.util.HashMap;
+import java.util.List;
+
 import org.cytoscape.graph.render.immed.EdgeAnchors;
-import org.cytoscape.util.intr.IntEnumerator;
-import org.cytoscape.util.intr.IntIterator;
-import org.cytoscape.util.intr.IntObjHash;
-import org.cytoscape.util.intr.MinIntHeap;
+import org.cytoscape.graph.render.immed.GraphGraphics;
+
 import org.cytoscape.model.CyNetwork;
 import org.cytoscape.model.CyNode;
 import org.cytoscape.model.CyEdge;
 
-import java.awt.*;
-import java.util.HashMap;
+import org.cytoscape.util.intr.IntEnumerator;
+import org.cytoscape.util.intr.IntIterator;
+import org.cytoscape.util.intr.IntObjHash;
+import org.cytoscape.util.intr.MinIntHeap;
 
 
 class DEdgeDetails extends IntermediateEdgeDetails {
 	final DGraphView m_view;
 	final IntObjHash m_colorsLowDetail = new IntObjHash();
 	final Object m_deletedEntry = new Object();
-	final HashMap<Integer,Object> m_segmentThicknesses = new HashMap<Integer,Object>();
+	final HashMap m_segmentThicknesses = new HashMap();
 	final HashMap m_segmentStrokes = new HashMap();
-	final HashMap<Integer,Object> m_sourceArrows = new HashMap<Integer,Object>();
-	final HashMap<Integer,Object> m_sourceArrowPaints = new HashMap<Integer,Object>();
-	final HashMap<Integer,Object> m_targetArrows = new HashMap<Integer,Object>();
-	final HashMap<Integer,Object> m_targetArrowPaints = new HashMap<Integer,Object>();
-	final HashMap<Integer,Object> m_segmentPaints = new HashMap<Integer,Object>();
-	final HashMap<Integer,Object> m_segmentDashLengths = new HashMap<Integer,Object>();
-	final HashMap<Integer,Object> m_labelCounts = new HashMap<Integer,Object>();
-	final HashMap<Long,String> m_labelTexts = new HashMap<Long,String>();
-	final HashMap<Long,Font> m_labelFonts = new HashMap<Long,Font>();
-	final HashMap<Long,Paint> m_labelPaints = new HashMap<Long,Paint>();
+	final HashMap m_sourceArrows = new HashMap();
+	final HashMap m_sourceArrowPaints = new HashMap();
+	final HashMap m_targetArrows = new HashMap();
+	final HashMap m_targetArrowPaints = new HashMap();
+	final HashMap m_segmentPaints = new HashMap();
+	//final HashMap m_segmentDashLengths = new HashMap();
+	final HashMap m_labelCounts = new HashMap();
+	final HashMap m_labelTexts = new HashMap();
+	final HashMap m_labelFonts = new HashMap();
+	final HashMap m_labelPaints = new HashMap();
 	final HashMap m_labelWidths = new HashMap();
 
 	DEdgeDetails(DGraphView view) {
@@ -69,7 +77,7 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 		if ((o != null) && (o != m_deletedEntry))
 			m_colorsLowDetail.put(edge, m_deletedEntry);
 
-		final Integer key = Integer.valueOf(edge);
+		final Integer key = new Integer(edge);
 		m_segmentThicknesses.remove(key);
 		m_segmentStrokes.remove(key);
 		m_sourceArrows.remove(key);
@@ -77,7 +85,7 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 		m_targetArrows.remove(key);
 		m_targetArrowPaints.remove(key);
 		m_segmentPaints.remove(key);
-		m_segmentDashLengths.remove(key);
+//		m_segmentDashLengths.remove(key);
 		m_labelCounts.remove(key);
 		m_labelTexts.remove(key);
 		m_labelFonts.remove(key);
@@ -149,7 +157,7 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 * @return DOCUMENT ME!
 	 */
 	public Paint sourceArrowPaint(int edge) {
-		final Object o = m_sourceArrowPaints.get(Integer.valueOf(edge));
+		final Object o = m_sourceArrowPaints.get(new Integer(edge));
 
 		if (o == null)
 			return super.sourceArrowPaint(edge);
@@ -162,9 +170,9 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 */
 	void overrideSourceArrowPaint(int edge, Paint paint) {
 		if ((paint == null) || paint.equals(super.sourceArrowPaint(edge)))
-			m_sourceArrowPaints.remove(Integer.valueOf(edge));
+			m_sourceArrowPaints.remove(new Integer(edge));
 		else
-			m_sourceArrowPaints.put(Integer.valueOf(edge), paint);
+			m_sourceArrowPaints.put(new Integer(edge), paint);
 	}
 
 	/**
@@ -187,11 +195,11 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 * A non-negative arrowType has the special meaning to remove overridden
 	 * arrow.
 	 */
-	void overrideTargetArrow(int edge, int arrowType) {
+	void overrideTargetArrow(int edge, byte arrowType) {
 		if ((arrowType >= 0) || (arrowType == super.targetArrow(edge)))
-			m_targetArrows.remove(Integer.valueOf(edge));
+			m_targetArrows.remove(new Integer(edge));
 		else
-			m_targetArrows.put(Integer.valueOf(edge), new Integer(arrowType));
+			m_targetArrows.put(new Integer(edge), new Byte(arrowType));
 	}
 
 	/**
@@ -202,7 +210,7 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 * @return DOCUMENT ME!
 	 */
 	public Paint targetArrowPaint(int edge) {
-		final Object o = m_targetArrowPaints.get(Integer.valueOf(edge));
+		final Object o = m_targetArrowPaints.get(new Integer(edge));
 
 		if (o == null)
 			return super.targetArrowPaint(edge);
@@ -215,9 +223,9 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 */
 	void overrideTargetArrowPaint(int edge, Paint paint) {
 		if ((paint == null) || paint.equals(super.targetArrowPaint(edge)))
-			m_targetArrowPaints.remove(Integer.valueOf(edge));
+			m_targetArrowPaints.remove(new Integer(edge));
 		else
-			m_targetArrowPaints.put(Integer.valueOf(edge), paint);
+			m_targetArrowPaints.put(new Integer(edge), paint);
 	}
 
 	private final MinIntHeap m_heap = new MinIntHeap();
@@ -231,16 +239,18 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 * @return DOCUMENT ME!
 	 */
 	public EdgeAnchors anchors(int edge) {
-		final EdgeAnchors returnThis = (EdgeAnchors) (m_view.getEdgeView(edge));
+		final EdgeAnchors returnThis = (EdgeAnchors) (m_view.getEdgeView(~edge));
 
-		if (returnThis.numAnchors() > 0)
+		if (returnThis.numAnchors() > 0) 
 			return returnThis;
 
 		final CyNetwork graph = m_view.networkModel;
 		final CyEdge edgeObj = graph.getEdge(edge);
+		final int srcNode = edgeObj.getSource().getIndex();
+		final int trgNode = edgeObj.getTarget().getIndex();
 
-		if (edgeObj.getSource() == edgeObj.getTarget()) { // Self-edge.
-
+		// Calculate anchors necessary for self edges.
+		if (srcNode == trgNode) { // Self-edge.
 			final CyNode nodeObj = edgeObj.getSource();
 			final int node = nodeObj.getIndex(); 
 			m_view.m_spacial.exists(node, m_extentsBuff, 0);
@@ -251,7 +261,7 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 			final double y = (((double) m_extentsBuff[1]) + m_extentsBuff[3]) / 2.0d;
 			final double nodeSize = Math.max(w, h);
 			int i = 0;
-			java.util.List<CyEdge> selfEdges = graph.getConnectingEdgeList(nodeObj,nodeObj,CyEdge.Type.ANY);
+			List<CyEdge> selfEdges = graph.getConnectingEdgeList(nodeObj, nodeObj, CyEdge.Type.ANY);
 
 			for ( CyEdge e2obj : selfEdges ) {
 				final int e2 = e2obj.getIndex();
@@ -264,7 +274,6 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 			}
 
 			final int inx = i;
-
 			return new EdgeAnchors() {
 					public int numAnchors() {
 						return 2;
@@ -282,8 +291,18 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 				};
 		}
 
+		// Now add "invisible" anchors to edges for the case where multiple edges
+		// exist between two nodes. This has no effect if user specified anchors
+		// exist on the edge.
 		while (true) {
-			java.util.List<CyEdge> selfEdges = graph.getConnectingEdgeList(edgeObj.getSource(),edgeObj.getTarget(),CyEdge.Type.ANY);
+			// By consistently ordering the source and target nodes, dx and dy will always
+			// be calculated according to the same orientation. This allows the offset
+			// calculation to toggle the edges from side to side without any overlap.
+			final int tmpSrc = Math.min( srcNode, trgNode ); 
+			final int tmpTrg = Math.max( srcNode, trgNode ); 
+
+			// Sort the connecting edges.
+			List<CyEdge> selfEdges = graph.getConnectingEdgeList(edgeObj.getSource(), edgeObj.getTarget(), CyEdge.Type.ANY);
 
 			m_heap.empty();
 
@@ -291,49 +310,78 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 				m_heap.toss(e.getIndex());
 
 			final IntEnumerator otherEdges = m_heap.orderedElements(false);
+
 			int otherEdge = otherEdges.nextInt();
 
+			// If the first other edge is the same as this edge, 
+			// (i.e. we're at the end of the list?).
 			if (otherEdge == edge)
 				break;
 
-			int i = (((EdgeAnchors) m_view.getEdgeView(otherEdge)).numAnchors() == 0) ? 1 : 0;
+			// So we don't count the other edge twice?
+			int i = (((EdgeAnchors) m_view.getEdgeView(~otherEdge)).numAnchors() == 0) ? 1 : 0;
 
+			// Count the number of other edges.
 			while (true) {
 				if (edge == (otherEdge = otherEdges.nextInt()))
 					break;
 
-				if (((EdgeAnchors) m_view.getEdgeView(otherEdge)).numAnchors() == 0)
+				if (((EdgeAnchors) m_view.getEdgeView(~otherEdge)).numAnchors() == 0)
 					i++;
 			}
 
 			final int inx = i;
-			m_view.m_spacial.exists(edgeObj.getSource().getIndex(), m_extentsBuff, 0);
 
+			// Get source node size and position.
+			m_view.m_spacial.exists(tmpSrc, m_extentsBuff, 0);
 			final double srcW = ((double) m_extentsBuff[2]) - m_extentsBuff[0];
 			final double srcH = ((double) m_extentsBuff[3]) - m_extentsBuff[1];
 			final double srcX = (((double) m_extentsBuff[0]) + m_extentsBuff[2]) / 2.0d;
 			final double srcY = (((double) m_extentsBuff[1]) + m_extentsBuff[3]) / 2.0d;
-			m_view.m_spacial.exists(edgeObj.getTarget().getIndex(), m_extentsBuff, 0);
 
+			// Get target node size and position.
+			m_view.m_spacial.exists(tmpTrg, m_extentsBuff, 0);
 			final double trgW = ((double) m_extentsBuff[2]) - m_extentsBuff[0];
 			final double trgH = ((double) m_extentsBuff[3]) - m_extentsBuff[1];
 			final double trgX = (((double) m_extentsBuff[0]) + m_extentsBuff[2]) / 2.0d;
 			final double trgY = (((double) m_extentsBuff[1]) + m_extentsBuff[3]) / 2.0d;
+
+			// Used for determining the space between the edges.
 			final double nodeSize = Math.max(Math.max(Math.max(srcW, srcH), trgW), trgH);
+
+			// Midpoint between nodes.
 			final double midX = (srcX + trgX) / 2;
 			final double midY = (srcY + trgY) / 2;
+
+			// Distance in X and Y dimensions.
+			// Note that dx and dy may be negative.  This is OK, because this will ensure
+			// that the handle is always correctly placed offset from the midpoint of, 
+			// and perpendicular to, the original edge.
 			final double dx = trgX - srcX;
 			final double dy = trgY - srcY;
+
+			// Distance or length between nodes.
 			final double len = Math.sqrt((dx * dx) + (dy * dy));
 
-			if (((float) len) == 0.0f)
+			if (((float) len) == 0.0f) 
 				break;
 
-			final double normX = Math.abs(dx / len);
-			final double normY = Math.abs(dy / len);
-			final double factor = ((inx + 1) / 2) * (((inx % 2) == 0) ? 1 : (-1)) * nodeSize;
-			final double anchorX = midX + (factor * normY);
-			final double anchorY = midY - (factor * normX);
+			// This determines which side of the first edge and how far from the first
+			// edge the other edge should be placed.
+			// -  Divide by 2 puts consecutive edges at the same distance from the center
+			//    because of integer math.
+			// -  Modulo puts consecutive edges on opposite sides.
+			// -  Node size is for consistent scaling.
+			final double offset = ((inx + 1) / 2) * (inx % 2 == 0 ? 1 : -1) * nodeSize;
+
+			// Depending on orientation sine or cosine. This adjusts the length
+			// of the offset according the appropriate X and Y dimensions.
+			final double normX = dx / len;
+			final double normY = dy / len;
+
+			// Calculate the anchor points.
+			final double anchorX = midX + (offset * normY);
+			final double anchorY = midY - (offset * normX);
 
 			return new EdgeAnchors() {
 					public int numAnchors() {
@@ -359,8 +407,8 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 * @return DOCUMENT ME!
 	 */
 	public float anchorSize(int edge, int anchorInx) {
-		if (m_view.getEdgeView(edge).isSelected()
-		    && (((DEdgeView) m_view.getEdgeView(edge)).numAnchors() > 0))
+		if (m_view.getEdgeView(~edge).isSelected()
+		    && (((DEdgeView) m_view.getEdgeView(~edge)).numAnchors() > 0))
 			return m_view.getAnchorSize();
 		else
 
@@ -376,7 +424,7 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 * @return DOCUMENT ME!
 	 */
 	public Paint anchorPaint(int edge, int anchorInx) {
-		if (((DEdgeView) (m_view.getEdgeView(edge))).m_lineType == DEdgeView.STRAIGHT_LINES)
+		if (((DEdgeView) (m_view.getEdgeView(~edge))).m_lineType == DEdgeView.STRAIGHT_LINES)
 			anchorInx = anchorInx / 2;
 
 		if (m_view.m_selectedAnchors.count((edge << 6) | anchorInx) > 0)
@@ -394,7 +442,7 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 * @return DOCUMENT ME!
 	 */
 	public float segmentThickness(int edge) {
-		final Object o = m_segmentThicknesses.get(Integer.valueOf(edge));
+		final Object o = m_segmentThicknesses.get(new Integer(edge));
 
 		if (o == null)
 			return super.segmentThickness(edge);
@@ -408,11 +456,33 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 */
 	void overrideSegmentThickness(int edge, float thickness) {
 		if ((thickness < 0.0f) || (thickness == super.segmentThickness(edge)))
-			m_segmentThicknesses.remove(Integer.valueOf(edge));
+			m_segmentThicknesses.remove(new Integer(edge));
 		else
-			m_segmentThicknesses.put(Integer.valueOf(edge), new Float(thickness));
+			m_segmentThicknesses.put(new Integer(edge), new Float(thickness));
 	}
 
+	/**
+	 * DOCUMENT ME!
+	 *
+	 * @param edge DOCUMENT ME!
+	 *
+	 * @return DOCUMENT ME!
+	public Paint segmentPaint(int edge) {
+		final Object o = m_segmentPaints.get(new Integer(edge));
+
+		if (o == null)
+			return super.segmentPaint(edge);
+
+		return (Paint) o;
+	}
+	 */
+	/**
+	 * DOCUMENT ME!
+	 *
+	 * @param edge DOCUMENT ME!
+	 *
+	 * @return DOCUMENT ME!
+	 */
 	public Stroke segmentStroke(int edge) {
 		final Object o = m_segmentStrokes.get(new Integer(edge));
 
@@ -424,6 +494,15 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 
 	/*
 	 * A null paint has the special meaning to remove overridden paint.
+	void overrideSegmentPaint(int edge, Paint paint) {
+		if ((paint == null) || paint.equals(super.segmentPaint(edge)))
+			m_segmentPaints.remove(new Integer(edge));
+		else
+			m_segmentPaints.put(new Integer(edge), paint);
+	}
+	 */
+	/*
+	 * A null paint has the special meaning to remove overridden paint.
 	 */
 	void overrideSegmentStroke(int edge, Stroke stroke) {
 		if ((stroke == null) || stroke.equals(super.segmentStroke(edge)))
@@ -432,14 +511,59 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 			m_segmentStrokes.put(new Integer(edge), stroke);
 	}
 
+	/**
+	 * DOCUMENT ME!
+	 *
+	 * @param edge DOCUMENT ME!
+	 *
+	 * @return DOCUMENT ME!
+	public float segmentDashLength(int edge) {
+		final Object o = m_segmentDashLengths.get(new Integer(edge));
+
+		if (o == null)
+			return super.segmentDashLength(edge);
+
+		return ((Float) o).floatValue();
+	}
+	 */
+
+	/**
+	 * DOCUMENT ME!
+	 *
+	 * @param edge DOCUMENT ME!
+	 *
+	 * @return DOCUMENT ME!
+	 */
+	public Paint segmentPaint(int edge) {
+		final Object o = m_segmentPaints.get(new Integer(edge));
+
+		if (o == null)
+			return super.segmentPaint(edge);
+
+		return (Paint) o;
+	}
+
 	/*
-	 * A null paint has the special meaning to remove overridden paint.
+	 * A negative length value has the special meaning to remove overridden
+	 * length.
+	void overrideSegmentDashLength(int edge, float length) {
+		if ((length < 0.0f) || (length == super.segmentDashLength(edge)))
+			m_segmentDashLengths.remove(new Integer(edge));
+		else
+			m_segmentDashLengths.put(new Integer(edge), new Float(length));
+	}
+	 */
+
+
+	/*
+	 * A negative length value has the special meaning to remove overridden
+	 * length.
 	 */
 	void overrideSegmentPaint(int edge, Paint paint) {
-		if ((paint == null) || paint.equals(super.segmentPaint(edge)))
-			m_segmentPaints.remove(Integer.valueOf(edge));
+		if ((paint == null) || (paint == super.segmentPaint(edge)))
+			m_segmentPaints.remove(new Integer(edge));
 		else
-			m_segmentPaints.put(Integer.valueOf(edge), paint);
+			m_segmentPaints.put(new Integer(edge), paint);
 	}
 
 	/**
@@ -450,7 +574,7 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 * @return DOCUMENT ME!
 	 */
 	public int labelCount(int edge) {
-		final Object o = m_labelCounts.get(Integer.valueOf(edge));
+		final Object o = m_labelCounts.get(new Integer(edge));
 
 		if (o == null)
 			return super.labelCount(edge);
@@ -463,9 +587,9 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 */
 	void overrideLabelCount(int edge, int labelCount) {
 		if ((labelCount < 0) || (labelCount == super.labelCount(edge)))
-			m_labelCounts.remove(Integer.valueOf(edge));
+			m_labelCounts.remove(new Integer(edge));
 		else
-			m_labelCounts.put(Integer.valueOf(edge), Integer.valueOf(labelCount));
+			m_labelCounts.put(new Integer(edge), new Integer(labelCount));
 	}
 
 	/**
@@ -478,12 +602,12 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 */
 	public String labelText(int edge, int labelInx) {
 		final long key = (((long) edge) << 32) | ((long) labelInx);
-		final String o = m_labelTexts.get(Long.valueOf(key));
+		final Object o = m_labelTexts.get(new Long(key));
 
 		if (o == null)
 			return super.labelText(edge, labelInx);
 
-		return o;
+		return (String) o;
 	}
 
 	/*
@@ -493,9 +617,9 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 		final long key = (((long) edge) << 32) | ((long) labelInx);
 
 		if ((text == null) || text.equals(super.labelText(edge, labelInx)))
-			m_labelTexts.remove(Long.valueOf(key));
+			m_labelTexts.remove(new Long(key));
 		else
-			m_labelTexts.put(Long.valueOf(key), text);
+			m_labelTexts.put(new Long(key), text);
 	}
 
 	/**
@@ -508,12 +632,12 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 */
 	public Font labelFont(int edge, int labelInx) {
 		final long key = (((long) edge) << 32) | ((long) labelInx);
-		final Font o = m_labelFonts.get(Long.valueOf(key));
+		final Object o = m_labelFonts.get(new Long(key));
 
 		if (o == null)
 			return super.labelFont(edge, labelInx);
 
-		return o;
+		return (Font) o;
 	}
 
 	/*
@@ -523,9 +647,9 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 		final long key = (((long) edge) << 32) | ((long) labelInx);
 
 		if ((font == null) || font.equals(super.labelFont(edge, labelInx)))
-			m_labelFonts.remove(Long.valueOf(key));
+			m_labelFonts.remove(new Long(key));
 		else
-			m_labelFonts.put(Long.valueOf(key), font);
+			m_labelFonts.put(new Long(key), font);
 	}
 
 	/**
@@ -538,12 +662,12 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 	 */
 	public Paint labelPaint(int edge, int labelInx) {
 		final long key = (((long) edge) << 32) | ((long) labelInx);
-		final Paint o = m_labelPaints.get(Long.valueOf(key));
+		final Object o = m_labelPaints.get(new Long(key));
 
 		if (o == null)
 			return super.labelPaint(edge, labelInx);
 
-		return o;
+		return (Paint) o;
 	}
 
 	/*
@@ -553,25 +677,51 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 		final long key = (((long) edge) << 32) | ((long) labelInx);
 
 		if ((paint == null) || paint.equals(super.labelPaint(edge, labelInx)))
-			m_labelPaints.remove(Long.valueOf(key));
+			m_labelPaints.remove(new Long(key));
 		else
-			m_labelPaints.put(Long.valueOf(key), paint);
+			m_labelPaints.put(new Long(key), paint);
 	}
 
 	/**
 	 * The arrow size will scale with the edge width.
 	 */
 	public float sourceArrowSize(int edge) {
-		return (segmentThickness(edge) + DEdgeView.DEFAULT_ARROW_SIZE);
+		// For the half arrows, we need to scale multiplicatively
+		// so that the arrow matches the line.
+		int arrowType = sourceArrow(edge);
+		if ( arrowType == GraphGraphics.ARROW_HALF_TOP ||
+		     arrowType == GraphGraphics.ARROW_HALF_BOTTOM )
+			 return (segmentThickness(edge) * DEdgeView.DEFAULT_ARROW_SIZE);
+
+		// For all other arrows we can scale additively.  This produces
+		// less egregiously big arrows.
+		else
+			return (segmentThickness(edge) + DEdgeView.DEFAULT_ARROW_SIZE);
 	}
 
 	/**
 	 * The arrow size will scale with the edge width.
 	 */
 	public float targetArrowSize(int edge) {
-		return (segmentThickness(edge) + DEdgeView.DEFAULT_ARROW_SIZE);
+		// For the half arrows, we need to scale multiplicatively
+		// so that the arrow matches the line.
+		int arrowType = targetArrow(edge);
+		if ( arrowType == GraphGraphics.ARROW_HALF_TOP ||
+		     arrowType == GraphGraphics.ARROW_HALF_BOTTOM )
+			 return (segmentThickness(edge) * DEdgeView.DEFAULT_ARROW_SIZE);
+		// For all other arrows we can scale additively.  This produces
+		// less egregiously big arrows.
+		else
+			return (segmentThickness(edge) + DEdgeView.DEFAULT_ARROW_SIZE);
 	}
 
+	/**
+	 * DOCUMENT ME!
+	 *
+	 * @param edge DOCUMENT ME!
+	 *
+	 * @return DOCUMENT ME!
+	 */
 	public double labelWidth(int edge) {
 		final Object o = m_labelWidths.get(new Integer(edge));
 
@@ -590,4 +740,5 @@ class DEdgeDetails extends IntermediateEdgeDetails {
 		else
 			m_labelWidths.put(new Integer(edge), new Double(width));
 	}
+
 }
